// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-tree-node renders 1`] = `
<rux-tree-node aria-expanded="false" aria-selected="false" role="treeitem">
  <mock:shadow-root>
    <div class="tree-node" id="node-1">
      <div class="parent" part="item" tabindex="0">
        <span>
          <slot name="prefix"></slot>
        </span>
        <span class="text">
          <slot></slot>
        </span>
        <span>
          <slot name="suffix"></slot>
        </span>
      </div>
      <div class="children">
        <slot name="node"></slot>
      </div>
    </div>
  </mock:shadow-root>
</rux-tree-node>
`;

exports[`rux-tree-node renders children 1`] = `
<rux-tree-node aria-expanded="false" aria-selected="false" role="treeitem">
  <mock:shadow-root>
    <div class="tree-node tree-node--has-children" id="node-2">
      <div class="parent" part="item" tabindex="0">
        <rux-icon class="arrow" exportparts="icon" icon="keyboard-arrow-right" size="1.25rem"></rux-icon>
        <span>
          <slot name="prefix"></slot>
        </span>
        <span class="text">
          <slot></slot>
        </span>
        <span>
          <slot name="suffix"></slot>
        </span>
      </div>
      <div class="children" role="group">
        <slot name="node"></slot>
      </div>
    </div>
  </mock:shadow-root>
  Parent
  <rux-tree-node aria-expanded="false" aria-selected="false" role="treeitem" slot="node">
    <mock:shadow-root>
      <div class="tree-node" id="node-3">
        <div class="parent" part="item" tabindex="0">
          <span>
            <slot name="prefix"></slot>
          </span>
          <span class="text">
            <slot></slot>
          </span>
          <span>
            <slot name="suffix"></slot>
          </span>
        </div>
        <div class="children">
          <slot name="node"></slot>
        </div>
      </div>
    </mock:shadow-root>
    Child
  </rux-tree-node>
</rux-tree-node>
`;
